--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
 
 /* Importação de font (google fonts) */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+ /*Variaveis*/
+ :root{
+    --azul: #41442a;
+    --branco:  #fff;
 
+ }
 
 /* CSS Reset */
 * {
@@ -21,24 +26,64 @@ body {
 }
 
 .container {
-    margin: 0 auto;
+    margin: 1 auto;
     /* centralizar o container*/
 }
 
-/* Smartphome portrait ******/
-@media (min-width:768px) {
+/* Smartphome portrait ***** 
 
     /* Cabeçalho*/
-    .container {
-        max-width: 620px;
+    
+    header{
+        height: 100px;
+        background-color: rgb(196, 145, 51);
     }
 
     #logo img {
-        margin: 10px 0px 0px 0px;
+        width: 100px;
+        height: 100px;
+    
     }
-}
 
-@media (min-width: 576px) {}
+    #check{
+        display: none;
+    }
+    /*efeito de deslizar o menu*/
+    /* Se check estiver "ticado", cria um estilo parar url*/
+    #check:checked~ul {
+        right: 0px;
+
+    }
+    label{
+        font-size: 3em;
+        position: left;
+        top: 30px;
+        left: 15px;
+        color: #ffff00;     
+    }
+    nav ul {
+        height: 100vh; /*100vh - 100% altura da tela*/
+        background-color: var(--azul);
+        list-style: none; 
+        /*remover bullets*/
+        width: 65%;
+        position: fixed;
+        top: 65px;
+        right: -65%;
+        transition: all.05s;
+    }
+nav ul li{ /*é a parte que ajusta os párametros da lista do menu*/
+    padding: 15px 20px 15px 20px;
+    border-bottom: 1px solid var(--branco);
+    text-align: left;
+}
+nav ul li a {
+    color: var(--branco);
+    text-decoration: none; /*remover sublinhado*/
+}
+@media (min-width: 576px) {
+    
+}
 
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<*/
 
@@ -64,10 +109,6 @@ body {
     .container {
         max-width: 1140px;
         background-color: #ff009d;
-    }
-
-    header {
-        height: 150;
     }
 
     #logo img {
