--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
 
 /* Importação de font (google fonts) */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
- /*Variaveis*/
- :root{
-    --azul: #41442a;
-    --branco:  #fff;
 
- }
+/*Variaveis*/
+:root {
+    --azul: #41442a;
+    --branco: #fff;
+
+}
 
 /* CSS Reset */
 * {
@@ -26,64 +27,105 @@ body {
 }
 
 .container {
-    margin: 1 auto;
-    /* centralizar o container*/
+    margin: 0 auto; /* margin: 0 auto; */
+    display: flex; /* centralizar o container*/
+    justify-content: space-between;
+    align-items: center;
 }
-
+.botao {
+    text-decoration: none;
+    color: var(--azul);
+    font-size: 1.3em;
+    font-weight: 700;
+    background-color: var(--vermelho);
+    width: 180px;
+    padding: 10px 0px;
+    border: 2px solid(--branco);
+    border-radius: 25px;
+    align-self: center;
+    margin-top: 10px;
+}
 /* Smartphome portrait ***** 
 
     /* Cabeçalho*/
-    
-    header{
-        height: 100px;
-        background-color: rgb(196, 145, 51);
-    }
 
-    #logo img {
-        width: 100px;
-        height: 100px;
-    
-    }
+header {
+    height: 100px;
+    background-color: 
+}
 
-    #check{
-        display: none;
-    }
-    /*efeito de deslizar o menu*/
-    /* Se check estiver "ticado", cria um estilo parar url*/
-    #check:checked~ul {
-        right: 0px;
+#logo img {
+    width: 100px;
+    height: 100px;
 
-    }
-    label{
-        font-size: 3em;
-        position: left;
-        top: 30px;
-        left: 15px;
-        color: #ffff00;     
-    }
-    nav ul {
-        height: 100vh; /*100vh - 100% altura da tela*/
-        background-color: var(--azul);
-        list-style: none; 
-        /*remover bullets*/
-        width: 65%;
-        position: fixed;
-        top: 65px;
-        right: -65%;
-        transition: all.05s;
-    }
-nav ul li{ /*é a parte que ajusta os párametros da lista do menu*/
+}
+ 
+#check {
+    display: none;
+}
+
+/*efeito de deslizar o menu*/
+/* Se check estiver "ticado", cria um estilo parar url*/
+#check:checked~ul {
+    right: 0px;
+
+}
+
+label {
+    font-size: 3em;
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    color: #66ff00;
+}
+
+nav ul {
+    height: 100vh;
+    /*100vh - 100% altura da tela*/
+    background-color: var(--azul);
+    list-style: none;
+    /*remover bullets*/
+    width: 65%;
+    position: fixed;
+    top: 80px;
+    right: -65%;
+    transition: all 0.5s;
+}
+
+nav ul li {
+    /*é a parte que ajusta os párametros da lista do menu*/
     padding: 15px 20px 15px 20px;
     border-bottom: 1px solid var(--branco);
     text-align: left;
 }
+
 nav ul li a {
     color: var(--branco);
-    text-decoration: none; /*remover sublinhado*/
+    text-decoration: none;
+    /*remover sublinhado*/
 }
-@media (min-width: 576px) {
-    
-}
+   /* Banner*/
+main{
+    height: 40vh;  /* como nao sabe o tamanho da tela põe em vh e nao % */
+    background: url( img/banner2.jpg);
+    background-size: cover ;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+  /*  justify-content: center; */ 
+    text-align: center;
+}   
+    main h1, h2{
+        color: var(--branco);
+        text-shadow: #000 0.005em 0.05em 0.05em; /*efeito de sombra*/
+           }
+    main h1 {     
+             font-size: 3em; /*tamanho da letra*/
+         }
+    main h2{ 
+        font-size: 2em;
+
+    }
 
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<*/
 
@@ -97,20 +139,25 @@ nav ul li a {
 
     .container {
         max-width: 540px;
-        background: #ffff00;
+        background:
 
     }
 }
 
+@media (min-width: 768px) {
+    nav ul{ 
+        width:  50%;
+        height: 50%;
+    }
+}
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<*>
 
 /* Smartphome PCS / Notbooks >>>>>>>>>>>>>>>>>>>>>>>> ******/
 @media (min-width: 1200px) {
     .container {
         max-width: 1140px;
-        background-color: #ff009d;
+        background-color:
     }
-
     #logo img {
         width: 128px;
         height: 128px;
@@ -121,7 +168,8 @@ nav ul li a {
 @media (min-width: 1200px) {
     .container {
         max-width: 1140px;
-        background-color: #ff009d;
+        background-color:;
+        display: flex;
     }
 
     header {
@@ -132,13 +180,33 @@ nav ul li a {
         width: 128px;
         height: 128px;
     }
+    /* transformação do menu no pc e notbook pondo none exclui o hamburguer*/
+    label {
+        display: none;
+    }
+    nav ul{
+         width: 100%;
+         height: auto;
+         position: right;
+         background-color: transparent; 
+    }
+    nav ul li {
+        float:left;
+        border: 0;
+    }
+    nav ul li a {
+        color: var( --azul);
+    }
+    nav ul li a:hover {
+        color: var(--vermelho);
+    }
 }
 
 /* Telas full hd >>>>>>>>>>>>>>>>>>>>>>>> ******/
 @media (min-width: 1400px) {
     .container {
         max-width: 1360px;
-        background-color: #7d5b8c;
+        background-color:;
     }
 
     header {
