--- a/style.css
+++ b/style.css
@@ -106,24 +106,31 @@ nav ul li a {
 }
    /* Banner*/
 main{
-    height: 40vh;  /* como nao sabe o tamanho da tela põe em vh e nao % */
-    background: url( img/banner2.jpg);
-    background-size: cover ;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-  /*  justify-content: center; */ 
-    text-align: center;
-}   
+    height: 60vh;
+    position: relative;
+}
+main video{ 
+    width: 100%;;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.destaque{
+    position: absolute;
+    bottom:30px;
+    background: #000;
+    left: 30px;
+    }
     main h1, h2{
         color: var(--branco);
         text-shadow: #000 0.005em 0.05em 0.05em; /*efeito de sombra*/
            }
     main h1 {     
-             font-size: 3em; /*tamanho da letra*/
+             font-size: 1.75em; /*tamanho da letra*/
          }
     main h2{ 
-        font-size: 2em;
+        font-size: 1.2  em;
 
     }
 
